--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL=https://ideafoundation.co/api
+VITE_API_BASE_URL=http://localhost/idea-backend/public
+# VITE_API_BASE_URL=https://ideafoundation.co/api
 VITE_R2_PUBLIC_DOMAIN=https://pub-8090965640ca4bd1b63bf23a3ab20377.r2.dev
